# game_on_yasuki

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  environment.yaml  play.py  play.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: check-lockfile.yml  ci.yml  docker-build.yml  run_tests.yml
app/: __init__.py  database.py  paths.py  schemas.py
app/api/: cards.py  main.py  test_api.py  test_websocket.py  websocket.py
app/assets/: paths.py  xml_to_sql.py
app/assets/deck_builder/: index.html  styles.css
app/engine/: players.py  zones.py
app/game_pieces/: cards.py  deck.py  dynasty.py  fate.py
app/gui/: __main__.py  actions.py  config.py  constants.py  controller.py  field.py  field_view.py  images.py  move_objects.py
app/gui/services/: __init__.py  actions.py  cards.py  hittest.py  permissions.py
app/gui/ui/: dialogs.py  images.py  menus.py
app/gui/visuals/: __init__.py  deck.py  hand.py  sprite.py  visual.py  zone.py
app/install/: install_db.py  json_to_sql.py  sets_to_sql.py  utils.py
app/search/: __init__.py  parse_search.py
docs/: api.md  card-data.md  deployment.md  development.md  docker.md  rules-skeleton.md  running.md  search-quick-reference.md  search-syntax.md  setup.md
docs/engine/: architecture.md  card-effects.md  counters-vs-cards.md
scripts/: sync_images.py
src/yasuki_core/: __init__.py  card_art.py  card_diff.py  database.py  deck_pdf.py  decklist.py  paths.py
src/yasuki_core/accounts/: banlist.py  crypto.py  db.py  deck_repo.py  decks.py  display_names.py  migrate.py  oauth_state.py  roles.py  sessions.py  users.py
src/yasuki_core/assets/: art_layout.json
src/yasuki_core/engine/: action_log.py  intents.py  ops.py  redaction.py  serialization.py  session.py  setup.py  snapshot.py  table.py  zones.py
src/yasuki_core/game_pieces/: cards.py  constants.py  counters.py  deck.py  dynasty.py  factory.py  fate.py  pregame.py
src/yasuki_core/install/: format_metadata.py  images_to_sql.py  install_db.py  json_to_sql.py  sets_to_sql.py  utils.py  yaml_to_sql.py
src/yasuki_core/search/: __init__.py  boolean_query.py  parse_search.py
src/yasuki_gui/: __main__.py  config.py  constants.py  controller.py  field_view.py  layout.py  rules_runner.py  session.py  tags.py  theme.py
src/yasuki_gui/services/: __init__.py  actions.py  drag.py  hittest.py  permissions.py
src/yasuki_gui/ui/: dialogs.py  images.py  info_box.py  menus.py  phase_bar.py  prompt_box.py
src/yasuki_gui/visuals/: __init__.py  cardface.py  deck.py  hand.py  sprite.py  visual.py  zone.py
src/yasuki_web/: README.md  auth.py  cards.py  config.py  game_log.py  main.py  notifications.py  rooms.py  saved_decks.py  schemas.py  snapshot.py  websocket.py  wip_gate.py
tests/: conftest.py  test_database.py
tests/app/engine/: test_zones.py
tests/app/game_pieces/: test_deck.py  test_fate.py
tests/app/gui/: conftest.py  test_battlefield_tracking.py  test_deck_drag.py  test_drop_zones.py  test_field.py  test_province_destroy_hotkey.py  test_province_fill_hotkey.py  test_zones_gui.py
tests/deck_builder/: api.test.js  card-list.test.js  deck-list.test.js  deck-state.test.js  dom-shim.js  helpers.test.js  preview.test.js
tests/e2e/: conftest.py  test_board_e2e.py  test_create_token_e2e.py
tests/engine/: test_zones.py  test_zones_capacity.py
tests/game_pieces/: test_card_state.py  test_cards.py  test_deck.py  test_dynasty.py  test_fate.py
tests/gui/: conftest.py  test_config.py  test_controller.py  test_field_view.py  test_permissions.py  test_player_panel.py
tests/gui/ui/: test_dialogs.py  test_images.py  test_menus.py
tests/gui/visuals/: test_deck.py  test_sprite.py  test_zone.py
tests/install/: test_install_db.py  test_json_to_sql.py  test_utils.py
tests/search/: test_parse_search.py
tests/yasuki_core/: test_card_art.py  test_card_diff.py  test_card_filter.py  test_database.py  test_deck_pdf.py  test_decklist.py
tests/yasuki_core/accounts/: test_accounts_schema.py  test_crypto.py  test_decks.py  test_display_names.py  test_repos.py
tests/yasuki_core/engine/: test_action_log.py  test_apply_intent.py  test_intents.py  test_ownership.py  test_redaction.py  test_serialization.py  test_session.py  test_setup.py  test_shuffle_determinism.py  test_table.py  test_zones.py  test_zones_capacity.py
tests/yasuki_core/game_pieces/: test_card_state.py  test_cards.py  test_counters.py  test_deck.py  test_factory.py  test_fate.py  test_pregame.py
tests/yasuki_core/install/: test_images_to_sql.py  test_install_db.py  test_json_to_sql.py  test_utils.py  test_yaml_to_sql.py
tests/yasuki_core/search/: test_boolean_query.py  test_parse_search.py
tests/yasuki_gui/: conftest.py  test_config.py  test_controller.py  test_field_view.py  test_layout.py  test_parity.py  test_permissions.py  test_player_panel.py  test_presenter.py  test_rules_runner.py  test_session.py
tests/yasuki_gui/ui/: test_dialogs.py  test_images.py  test_info_box.py  test_menus.py  test_phase_bar.py  test_prompt_box.py
tests/yasuki_gui/visuals/: test_cardface.py  test_deck.py  test_sprite.py  test_visual.py  test_zone.py
tests/yasuki_web/: _support.py  conftest.py  test_api_contract.py  test_auth.py  test_board.py  test_chat.py  test_config.py  test_deck_search.py  test_game_log.py  test_intents.py  test_load_deck.py  test_notifications.py  test_play_pages.py  test_ready.py  test_rooms.py  test_saved_decks.py  test_schemas.py  test_seating.py  test_snapshot.py  test_websocket.py  test_wip_gate.py
tests/yasuki_web/deck_builder/: account.test.js  api.test.js  art.test.js  card-list.test.js  deck-io.test.js  deck-list.test.js  deck-state.test.js  deck-storage.test.js  dom-shim.js  fixtures.js  helpers.test.js  preview.test.js  print.test.js
tests/yasuki_web/site/: account-widget.test.js  avatar.test.js  board.test.js  card-common.test.js  card-crop.test.js  deck-dialog.test.js  fixtures.js  flip.test.js  optimistic.test.js  play-online.test.js  probability.test.js  reconcile.test.js  saved-decks.test.js  (+4 more)
(+416 files in other folders)
